--- a/gemspec.yml
+++ b/gemspec.yml
@@ -6,6 +6,9 @@ authors: Postmodern
 email: postmodern.mod3@gmail.com
 homepage: https://github.com/postmodern/ffi-http-parser#readme
 
+dependencies:
+  ffi: ~> 1.0
+
 development_dependencies:
   rubygems-tasks: ~> 0.2
   rspec: ~> 2.4
