--- a/gemspec.yml
+++ b/gemspec.yml
@@ -6,6 +6,8 @@ authors: Postmodern
 email: postmodern.mod3@gmail.com
 homepage: https://github.com/postmodern/ffi-http-parser#readme
 
+requirements: http-parser 1.0
+
 dependencies:
   ffi: ~> 1.0
 
